--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -43,6 +43,7 @@
               {{- value -}}
               {% endfor %}
             </select>
+            {%endif%}
             {%endfor}
   {%- else -%}
     <variant-selects
