--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -39,7 +39,7 @@
               name="options[{{ option.name | escape }}]"
               form="{{ product_form_id }}"
             >
-              {% for value in option.value %}
+              {% for value in option.values %}
               {{- value -}}
               {% endfor %}
             </select>
