new variant change

--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -40,7 +40,9 @@
               form="{{ product_form_id }}"
             >
               {% for value in option.values %}
+              <option value="{{value | escape}}"
               {{- value -}}
+              </option>
               {% endfor %}
             </select>
             {%endif%}
