--- a/snippets/product-variant-options.liquid
+++ b/snippets/product-variant-options.liquid
@@ -59,10 +59,12 @@
         class="disabled"
       {% endif %}
     >
-    <label for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" class="{% if option.name == 'Size' %}hidden{% endif %} label--{{option.name}} {% if option.selected_value == value %}color-checked{%endif%}" data-val="{{value}}">
+    <label for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" class="{% if option.name == 'Size' %}hidden{% endif %} label--{{ option.name }}{% if option.selected_value == value %} color-checked{% endif %}" data-val="{{ value }}" style="background:{{ value }}">
       {{ value -}}
       <span class="visually-hidden">{{ 'products.product.variant_sold_out_or_unavailable' | t }}</span>
     </label>
+   
+     
   {%- elsif block.settings.picker_type == 'dropdown' -%}
     <option
       value="{{ value | escape }}"
