--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -73,6 +73,7 @@
               assign quantity_rule_soldout = true
             endif
           -%}
+          <p class="size-message">Please select your size!</p>
           <button
             id="ProductSubmitButton-{{ section_id }}"
             type="submit"
