--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -365,6 +365,7 @@
     });
 
 document.addEventListener('DOMContentLoaded',function(){
+  const selectedValue = selectElement.value;
 if (selectedValue === 'Unselected') {
     // Add the class 'cart-disabled' to the submit button
     submitButton.classList.add('cart-disabled');
