--- a/assets/base.css
+++ b/assets/base.css
@@ -3529,5 +3529,5 @@ variant-selects{
     height: 36px;
     border: unset;
     text-indent: -99999px;
-    padding: unset;
+    padding: unset!important;
 }
