--- a/snippets/product-media-gallery.liquid
+++ b/snippets/product-media-gallery.liquid
@@ -70,7 +70,7 @@
           id="Slide-{{ section.id }}-{{ featured_media.id }}{{ id_append }}"
           class="product__media-item grid__item slider__slide is-active{% if single_media_visible %} product__media-item--single{% endif %}{% if featured_media.media_type != 'image' %} product__media-item--full{% endif %}{% if section.settings.hide_variants and variant_images contains featured_media.src %} product__media-item--variant{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %} hidden thumbnail-custom"
           data-media-id="{{ section.id }}-{{ featured_media.id }}"
-          data-alt="{{eatured_media.alt}}"
+          data-alt="{{featured_media.alt}}"
         >
           {%- assign media_position = 1 -%}
           {% render 'product-thumbnail',
