--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -423,7 +423,7 @@
             {%- when 'variant_picker' -%}
               {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
             {%- when 'buy_buttons' -%}
-            {% if product.handle == 'black-leather-bag' %}
+            {% if product.handle == 'handbag' %}
             <div class="bundle--item hidden" var_val="{{ bunle_pro.selected_or_first_available_variant.id }}"></div>
             {% endif %}
               {%- render 'buy-buttons', block: block, product: product, product_form_id: product_form_id, section_id: section.id, show_pickup_availability: true -%}
