--- a/assets/base.css
+++ b/assets/base.css
@@ -3532,5 +3532,5 @@ variant-selects{
     padding: unset!important;
 }
 .swatch-border{
-  
+  box-shadow: inset 0px 0px 0px 3px rgb(255 251 255);
 }
