final code remove bundle item

--- a/assets/base.css
+++ b/assets/base.css
@@ -3534,3 +3534,7 @@ variant-selects{
 .swatch-border{
   box-shadow: inset 0px 0px 0px 3px rgb(255 251 255);
 }
+.item-disable{
+  pointer-events: :none;
+  opacity: 0.5;
+}
