--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -48,6 +48,9 @@
                           name="options[{{ option.name | escape }}]"
                           form="{{ product_form_id }}"
                         >
+                        <option value="Unselected">
+                              Unselected
+                            </option>
                           {%- for value in option.values -%}
                             <option value="{{ value | escape }}">
                               {{- value -}}
