--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -371,15 +371,22 @@
 document.addEventListener('DOMContentLoaded',function(){
   const selectedValue = selectElement.value;
   const checkedCheckboxes = document.querySelectorAll(".var--Size input[type=radio]:checked");
-if (selectedValue === 'Unselected') {
-    // Add the class 'cart-disabled' to the submit button
+   checkedCheckboxes.forEach(function(checkbox) {
+    
+    if (checkbox.value === 'Unselected') {
+     // Add the class 'cart-disabled' to the submit button
     submitButton.classList.add('cart-disabled');
     sizeMessage.style.display = 'block';
-  } else {
-    // Remove the class 'cart-disabled' from the submit button
+    }
+    else{
+// Remove the class 'cart-disabled' from the submit button
     submitButton.classList.remove('cart-disabled');
         sizeMessage.style.display = 'none';
-       }
+       
+    }
+  });
+
+    
     });
 
     </script>
